# opengl_tut

./: CMakeLists.txt  circle.cpp  glad.c
Include/: Shader.h
Include/glad/: glad.h
tutorial/: CMakeLists.txt  ex58.cpp  shaderTut.cpp
tutorial/6.3/: CMakeLists.txt  fshader  shader.vs  shaderInOut.cpp
tutorial/attrib/: CMakeLists.txt  fshader  shaderAttr.cpp  shaderUni.cpp  vshader
tutorial/uniform/: CMakeLists.txt  fshader
